--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ homepage = "https://github.com/compass-rs/compass"
 
 [dependencies]
 sass-rs = "0.0.8"
+rustc-serialize = "0.3"
 
 [dependencies.image]
 git = "https://github.com/PistonDevelopers/image"
