Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ after_success: |
   git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
 env:
   global:
-    secure: YFJ1s6xn4Rh3jJZ0z0y63COw1DXvFhMlC5A/6eXYFV1v8Fqsl7DGT7FSVPn+0usS5FmWE3oMFQdTZRluZYv/22G53aIUJpNql37FY96zQfhSFEVp58xGLK+Atw+HczWUFKYAESNYTVS0QpMXqair1HyESi1bMTYfc9e1wz+w8pU=
+  - secure: YFJ1s6xn4Rh3jJZ0z0y63COw1DXvFhMlC5A/6eXYFV1v8Fqsl7DGT7FSVPn+0usS5FmWE3oMFQdTZRluZYv/22G53aIUJpNql37FY96zQfhSFEVp58xGLK+Atw+HczWUFKYAESNYTVS0QpMXqair1HyESi1bMTYfc9e1wz+w8pU=
+  - secure: cmKaqYBMc6UzNA7P1vE7zbVoUCqh1fYaEHsXCZqKBl6UlGxBMrh62k7t2VbMtFEuIE/ZhmpgI98WmmYyeYSSV9PrASpfvSPQU7DD+DJAutS8folWn92PwF7RYYQDJhvXvizHbmYbJcKNsvaMCuxfH5HDwSGBBzeMV35EzpA4cO8=
