--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/compass-rs/compass.git"
 homepage = "https://github.com/compass-rs/compass"
+description = "Command line `compass` executable - work in progress"
 
 [dependencies]
 sass-rs = "0.0.11"
+compass-sprite = "0.0.2"
 rustc-serialize = "0.3"
 
 [dependencies.image]
-git = "https://github.com/PistonDevelopers/image"
+# git = "https://github.com/PistonDevelopers/image"
+version = "0.3.7"
