Add stable rust to the travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: rust
 rust:
-    - 1.0.0-beta
+    - beta
     - nightly
+    - stable
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
